tests/baselines/reference/optionalParamReferencingOtherParams2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
optionalParamReferencingOtherParams2.ts(2,29): error TS2373: Parameter 'y' cannot reference identifier 'b' declared after it.
optionalParamReferencingOtherParams2.ts(2,29): error TS2454: Variable 'b' is used before being assigned.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== optionalParamReferencingOtherParams2.ts (2 errors) ====
    var a = 1;
    function strange(x = a, y = b) { 
                                ~
!!! error TS2373: Parameter 'y' cannot reference identifier 'b' declared after it.
                                ~
!!! error TS2454: Variable 'b' is used before being assigned.
        var b = "";
        return y;
    }